Fix supporters separator label on small devices

--- a/_sass/_pages/_index.scss
+++ b/_sass/_pages/_index.scss
@@ -172,7 +172,7 @@ section.horizontal-ruler {
     top: 50%;
     left: 50%;
     background: white;
-    padding: 0 40px;
+    padding: 0 20px;
     @include translate(-50%, -50%);
   }
 }
